// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders the structure correctly 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly for preview when no header is provided 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title=""
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label=""
                class="column-header align-column-center"
              >
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-center"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with column alignments 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr 1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-center"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test 2"
          >
            <div
              class="column-container"
              data-column-number="1"
              id="dg1-column1"
            >
              <div
                aria-label="Test 2"
                class="column-header align-column-right"
              >
                <span>
                  Test 2
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-center"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
          <div
            class="td td-borders align-column-right"
            data-position="1,0"
            role="gridcell"
            tabindex="-1"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with custom filtering 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
              <input
                type="text"
                value="dummy"
              />
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with dragging 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with dynamic row class 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr myclass"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with empty placeholder 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with filtering 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
              <input
                type="text"
                value="dummy"
              />
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with header filters and a11y 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    aria-label="filter title"
    class="widget-datagrid-header header-filters"
  >
    <div
      class="my-custom-filters"
    >
      <span />
    </div>
  </div>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with header wrapper 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="my-custom-header"
          >
            <div
              class="th"
              role="columnheader"
              style="cursor:unset"
              title="Test"
            >
              <div
                class="column-container"
                data-column-number="0"
                id="dg1-column0"
              >
                <div
                  aria-label="Test"
                  class="column-header align-column-left"
                >
                  <span>
                    Test
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with hiding 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr fit-content(50px)"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
          <div
            aria-label="Column selector"
            class="th column-selector"
            role="columnheader"
            title="Column selector"
          >
            <div
              class="column-selector-content"
            >
              <button
                aria-controls="dg1-column-selectors"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Column selector"
                class="btn btn-default column-selector-button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-eye fa-w-18"
                  data-icon="eye"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0.589893 7.715C0.724893 7.52 3.91989 3 7.99989 3C12.0799 3 15.2749 7.52 15.4099 7.715L15.6099 8L15.4099 8.285C15.2749 8.48 12.0799 13 7.99989 13C3.91989 13 0.724893 8.48 0.589893 8.285L0.389893 8L0.589893 7.715ZM1.62489 8C2.37489 8.96 4.98989 12 7.99989 12C11.0099 12 13.6249 8.96 14.3749 8C13.6249 7.04 11.0099 4 7.99989 4C4.98989 4 2.37489 7.04 1.62489 8ZM5.5 8C5.5 6.62 6.62 5.5 8 5.5C9.38 5.5 10.5 6.62 10.5 8C10.5 9.38 9.38 10.5 8 10.5C6.62 10.5 5.5 9.38 5.5 8ZM6.5 8C6.5 8.825 7.175 9.5 8 9.5C8.825 9.5 9.5 8.825 9.5 8C9.5 7.175 8.825 6.5 8 6.5C7.175 6.5 6.5 7.175 6.5 8Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
          <div
            class="td td-borders column-selector"
            role="gridcell"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with paging 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  >
    <div
      aria-label="Pagination"
      class="pagination-bar"
    >
      <button
        aria-label="Go to first page"
        class="btn pagination-button"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="pagination-icon step-backward"
            fill="currentColor"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23.19 6.63L11.51 15.61C11.25 15.81 11.25 16.2 11.51 16.4L23.2 25.38C23.53 25.64 24.01 25.4 24.01 24.99V7.02C24.01 6.6 23.53 6.37 23.2 6.63H23.19Z"
              fill="currentColor"
            />
            <path
              d="M10 6H8V26H10V6Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        aria-label="Go to previous page"
        class="btn pagination-button"
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="pagination-icon backward"
            fill="currentColor"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.19 6.63L3.51 15.61C3.25 15.81 3.25 16.2 3.51 16.4L14.2 25.38C14.53 25.64 15.01 25.4 15.01 24.99V7.02C15.01 6.6 14.53 6.37 14.2 6.63H14.19Z"
              fill="currentColor"
            />
            <path
              d="M27.19 6.63L16.5 15.61C16.24 15.81 16.24 16.2 16.5 16.4L27.19 25.38C27.52 25.64 28 25.4 28 24.99V7.02C28 6.6 27.52 6.37 27.19 6.63Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <span
        class="sr-only sr-only-focusable"
      >
        Currently showing 11 to 20 
      </span>
      <div
        aria-hidden="true"
        class="paging-status"
      >
        11 to 20 
      </div>
      <button
        aria-label="Go to next page"
        class="btn pagination-button"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          <svg
            class="pagination-icon forward"
            fill="currentColor"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.81 6.63C17.48 6.37 17 6.61 17 7.02V24.98C17 25.4 17.48 25.63 17.81 25.37L28.5 16.39C28.76 16.19 28.76 15.8 28.5 15.6L17.81 6.63Z"
              fill="currentColor"
            />
            <path
              d="M4.81 6.63C4.48 6.37 4 6.61 4 7.02V24.98C4 25.4 4.48 25.63 4.81 25.37L15.5 16.39C15.76 16.19 15.76 15.8 15.5 15.6L4.81 6.63Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Table renders the structure correctly with resizing 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table renders the structure correctly with sorting 1`] = `
<div
  class="test widget-datagrid"
>
  <div
    class="widget-datagrid-content sticky-table-container infinite-loading"
  >
    <div
      class="sticky-sentinel"
      style="height:1px;margin-bottom:-1px"
    />
    <div
      class="widget-datagrid-grid table"
      role="grid"
    >
      <div
        class="widget-datagrid-grid-body table-content"
        role="rowgroup"
        style="grid-template-columns:1fr"
      >
        <div
          class="tr"
          role="row"
        >
          <div
            class="th"
            role="columnheader"
            style="cursor:unset"
            title="Test"
          >
            <div
              class="column-container"
              data-column-number="0"
              id="dg1-column0"
            >
              <div
                aria-label="Test"
                class="column-header align-column-left"
              >
                <span>
                  Test
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
          role="row"
        >
          <div
            class="td td-borders align-column-left"
            data-position="0,0"
            role="gridcell"
            tabindex="0"
          >
            <span
              class="td-text"
            >
              Formatted Attr value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="widget-datagrid-footer table-footer"
  />
</div>
`;

exports[`Table with selection method checkbox render an extra column and add class to each selected row 1`] = `
<DocumentFragment>
  <div
    class="test widget-datagrid widget-datagrid-selectable-rows widget-datagrid-selection-method-checkbox"
  >
    <div
      class="widget-datagrid-content sticky-table-container"
    >
      <div
        class="sticky-sentinel"
        style="height: 1px; margin-bottom: -1px;"
      />
      <div
        aria-multiselectable="false"
        class="widget-datagrid-grid table"
        role="grid"
      >
        <div
          class="widget-datagrid-grid-body table-content"
          role="rowgroup"
          style="grid-template-columns: fit-content(48px) 1fr;"
        >
          <div
            class="tr"
            role="row"
          >
            <div
              class="th widget-datagrid-col-select"
              role="columnheader"
            />
            <div
              class="th"
              role="columnheader"
              style="cursor: unset;"
              title="Test"
            >
              <div
                class="column-container"
                data-column-number="0"
                id="dg1-column0"
              >
                <div
                  aria-label="Test"
                  class="column-header align-column-left"
                >
                  <span>
                    Test
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-selected="true"
            class="tr tr-selected"
            role="row"
          >
            <div
              class="td td-borders clickable widget-datagrid-col-select"
              data-position="0,0"
              role="gridcell"
              tabindex="-1"
            >
              <input
                aria-label="Select row 1"
                checked=""
                tabindex="0"
                type="checkbox"
              />
            </div>
            <div
              class="td td-borders clickable align-column-left"
              data-position="1,0"
              role="gridcell"
              tabindex="-1"
            >
              <span
                class="td-text"
              >
                Formatted Attr value
              </span>
            </div>
          </div>
          <div
            aria-selected="true"
            class="tr tr-selected"
            role="row"
          >
            <div
              class="td clickable widget-datagrid-col-select"
              data-position="0,1"
              role="gridcell"
              tabindex="-1"
            >
              <input
                aria-label="Select row 2"
                checked=""
                tabindex="-1"
                type="checkbox"
              />
            </div>
            <div
              class="td clickable align-column-left"
              data-position="1,1"
              role="gridcell"
              tabindex="-1"
            >
              <span
                class="td-text"
              >
                Formatted Attr value
              </span>
            </div>
          </div>
          <div
            aria-selected="true"
            class="tr tr-selected"
            role="row"
          >
            <div
              class="td clickable widget-datagrid-col-select"
              data-position="0,2"
              role="gridcell"
              tabindex="-1"
            >
              <input
                aria-label="Select row 3"
                checked=""
                tabindex="-1"
                type="checkbox"
              />
            </div>
            <div
              class="td clickable align-column-left"
              data-position="1,2"
              role="gridcell"
              tabindex="-1"
            >
              <span
                class="td-text"
              >
                Formatted Attr value
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="widget-datagrid-footer table-footer"
    >
      <div
        aria-label="Pagination"
        class="pagination-bar"
      >
        <button
          aria-label="Go to first page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon step-backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M23.19 6.63L11.51 15.61C11.25 15.81 11.25 16.2 11.51 16.4L23.2 25.38C23.53 25.64 24.01 25.4 24.01 24.99V7.02C24.01 6.6 23.53 6.37 23.2 6.63H23.19Z"
                fill="currentColor"
              />
              <path
                d="M10 6H8V26H10V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Go to previous page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.19 6.63L3.51 15.61C3.25 15.81 3.25 16.2 3.51 16.4L14.2 25.38C14.53 25.64 15.01 25.4 15.01 24.99V7.02C15.01 6.6 14.53 6.37 14.2 6.63H14.19Z"
                fill="currentColor"
              />
              <path
                d="M27.19 6.63L16.5 15.61C16.24 15.81 16.24 16.2 16.5 16.4L27.19 25.38C27.52 25.64 28 25.4 28 24.99V7.02C28 6.6 27.52 6.37 27.19 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <span
          class="sr-only sr-only-focusable"
        >
          Currently showing 11 to 20 
        </span>
        <div
          aria-hidden="true"
          class="paging-status"
        >
          11 to 20 
        </div>
        <button
          aria-label="Go to next page"
          class="btn pagination-button"
          disabled=""
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon forward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.81 6.63C17.48 6.37 17 6.61 17 7.02V24.98C17 25.4 17.48 25.63 17.81 25.37L28.5 16.39C28.76 16.19 28.76 15.8 28.5 15.6L17.81 6.63Z"
                fill="currentColor"
              />
              <path
                d="M4.81 6.63C4.48 6.37 4 6.61 4 7.02V24.98C4 25.4 4.48 25.63 4.81 25.37L15.5 16.39C15.76 16.19 15.76 15.8 15.5 15.6L4.81 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table with selection method rowClick add class to each selected cell 1`] = `
<DocumentFragment>
  <div
    class="test widget-datagrid widget-datagrid-selectable-rows widget-datagrid-selection-method-click"
  >
    <div
      class="widget-datagrid-content sticky-table-container"
    >
      <div
        class="sticky-sentinel"
        style="height: 1px; margin-bottom: -1px;"
      />
      <div
        aria-multiselectable="false"
        class="widget-datagrid-grid table"
        role="grid"
      >
        <div
          class="widget-datagrid-grid-body table-content"
          role="rowgroup"
          style="grid-template-columns: 1fr;"
        >
          <div
            class="tr"
            role="row"
          >
            <div
              class="th"
              role="columnheader"
              style="cursor: unset;"
              title="Test"
            >
              <div
                class="column-container"
                data-column-number="0"
                id="dg1-column0"
              >
                <div
                  aria-label="Test"
                  class="column-header align-column-left"
                >
                  <span>
                    Test
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-selected="true"
            class="tr tr-selected"
            role="row"
          >
            <div
              class="td td-borders clickable align-column-left"
              data-position="0,0"
              role="gridcell"
              tabindex="0"
            >
              <span
                class="td-text"
              >
                Formatted Attr value
              </span>
            </div>
          </div>
          <div
            aria-selected="true"
            class="tr tr-selected"
            role="row"
          >
            <div
              class="td clickable align-column-left"
              data-position="0,1"
              role="gridcell"
              tabindex="-1"
            >
              <span
                class="td-text"
              >
                Formatted Attr value
              </span>
            </div>
          </div>
          <div
            aria-selected="true"
            class="tr tr-selected"
            role="row"
          >
            <div
              class="td clickable align-column-left"
              data-position="0,2"
              role="gridcell"
              tabindex="-1"
            >
              <span
                class="td-text"
              >
                Formatted Attr value
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="widget-datagrid-footer table-footer"
    >
      <div
        aria-label="Pagination"
        class="pagination-bar"
      >
        <button
          aria-label="Go to first page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon step-backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M23.19 6.63L11.51 15.61C11.25 15.81 11.25 16.2 11.51 16.4L23.2 25.38C23.53 25.64 24.01 25.4 24.01 24.99V7.02C24.01 6.6 23.53 6.37 23.2 6.63H23.19Z"
                fill="currentColor"
              />
              <path
                d="M10 6H8V26H10V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Go to previous page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.19 6.63L3.51 15.61C3.25 15.81 3.25 16.2 3.51 16.4L14.2 25.38C14.53 25.64 15.01 25.4 15.01 24.99V7.02C15.01 6.6 14.53 6.37 14.2 6.63H14.19Z"
                fill="currentColor"
              />
              <path
                d="M27.19 6.63L16.5 15.61C16.24 15.81 16.24 16.2 16.5 16.4L27.19 25.38C27.52 25.64 28 25.4 28 24.99V7.02C28 6.6 27.52 6.37 27.19 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <span
          class="sr-only sr-only-focusable"
        >
          Currently showing 11 to 20 
        </span>
        <div
          aria-hidden="true"
          class="paging-status"
        >
          11 to 20 
        </div>
        <button
          aria-label="Go to next page"
          class="btn pagination-button"
          disabled=""
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon forward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.81 6.63C17.48 6.37 17 6.61 17 7.02V24.98C17 25.4 17.48 25.63 17.81 25.37L28.5 16.39C28.76 16.19 28.76 15.8 28.5 15.6L17.81 6.63Z"
                fill="currentColor"
              />
              <path
                d="M4.81 6.63C4.48 6.37 4 6.61 4 7.02V24.98C4 25.4 4.48 25.63 4.81 25.37L15.5 16.39C15.76 16.19 15.76 15.8 15.5 15.6L4.81 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
